# bhvit-width-scaling

./: .gitignore  LICENSE  README.md  datasets.py  engine.py  evaluate_test.py  main_new.py  models.py  onnx_benchmark.py  onnx_export.py  onnx_quantize.py  pyproject.toml
configs/BHViT/: config.json
configs/deit-tiny-patch16-224-cifar/: config.json
configs/deit-tiny-patch16-224-pets/: config.json
configs/sweep-hidden/2/: config.json
configs/sweep-hidden/3/: config.json
configs/sweep-intermediate/2/: config.json
configs/sweep-intermediate/3/: config.json
configs/sweep-intermediate/4/: config.json
configs/sweep/d112/: config.json
configs/sweep/d128/: config.json
configs/sweep/d144/: config.json
configs/sweep/d160/: config.json
configs/sweep/d176/: config.json
configs/sweep/d192/: config.json
configs/sweep/d208/: config.json
configs/sweep/d224/: config.json
configs/sweep/d240/: config.json
configs/sweep/d256/: config.json
configs/sweep/d64/: config.json
scripts/: finetune_teacher.py  finetune_teacher_cifar224.sh  finetune_teacher_pets224.sh  profile_model.py  profile_sweep.py  run_BHViT_cifar.sh  run_sweep_pets_bin.sh  run_sweep_pets_fp32.sh  run_sweep_pets_fullbin.sh  run_sweep_pets_hidden.sh  run_sweep_pets_hidden_fp.sh  run_sweep_pets_intermediate.sh  run_sweep_pets_intermediate_fp.sh  run_sweep_pets_somefp.sh  run_sweep_pets_vitbin.sh
scripts/old/: run_BHViT_cifar224.sh  run_BHViT_pets224.sh
transformer/: BHViT.py  utils_quant.py
visualize/: plot_efficiency_bar.py  plot_width_vs_precision.py
weights/: deit-tiny-pets-224.pth
(+2 files in other folders)
