[project]
name = "bhvit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "onnx>=1.21.0",
    "onnxruntime-gpu>=1.26.0; platform_machine != 'aarch64'",
    "onnxruntime>=1.26.0; platform_machine == 'aarch64'",
    "onnxscript>=0.7.0",
    "onnxsim>=0.6.3",
    "psutil>=7.2.2",
    "tensorboard>=2.20.0",
    "timm>=1.0.27",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "transformers>=5.8.0",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", marker = "platform_machine == 'aarch64'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "platform_machine == 'aarch64'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true
